# tracks

./: .gitignore  CLIENT.md  CMakeLists.txt  EVENTS.md  PROTOBUF.md  README.md  UNICAST.md
client/golang/: README.md  go.mod  main.go
client/golang/trackspb/: tracks.pb.go
client/windows-native/winplay/: .gitignore  CMakeLists.txt  DEVTOOLS-PLAN.md  DEVTOOLS-README.md  README.md  vcpkg.json
client/windows-native/winplay/proto/: tracks.proto
client/windows-native/winplay/src/: audio_player.cpp  audio_player.h  console_status.cpp  console_status.h  main.cpp  path_translator.cpp  path_translator.h  udp_receiver.cpp  udp_receiver.h
config/: tracks-default.yaml
proto/: tracks.proto
recv/: main.cpp
releases/: verify.txt
scripts/: package.sh
src/: analyzer.cpp  analyzer.h  config.cpp  config.h  emitter.cpp  emitter.h  events.cpp  events.h  main.cpp  transport.cpp  transport.h
